--- a/index.html
+++ b/index.html
@@ -69,6 +69,14 @@
       font-style: normal;
     }
 
+    .outfit-bold {
+      font-family: "Outfit", sans-serif;
+      font-optical-sizing: auto;
+      font-style: normal;
+      font-weight: bold;
+
+    }
+
     .anton-regular {
       font-family: "Anton", sans-serif;
       font-weight: 400;
